# SQL_Agent-Langchain

./: .env  .gitignore  README.md  main.py  pyproject.toml
agent/: agent.py
db_utils/: sqlite_db_load.py  sqlite_db_tools.py
model/: model.py
test/: langchain-lab.ipynb
