[project]
name = "practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain[google-genai,huggingface]>=1.3.11",
    "langchain-google-genai>=4.2.5",
    "requests>=2.34.2",
    "streamlit>=1.58.0",
]
